--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -347,7 +347,7 @@ export default defineConfig({
 
 - Type: `Object`
 
-The config of overview. The config is an object with the following types:
+The config of overview page/component. The config is an object with the following types:
 
 ```ts
 export interface FilterConfig {
