--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -350,7 +350,7 @@ export default defineConfig({
 The config of overview page/component. The config is an object with the following types:
 
 ```ts
-export interface FilterConfig {
+interface FilterConfig {
   filterNameText?: string;
   filterPlaceholderText?: string;
   filterNoResultText?: string;
