--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -333,7 +333,7 @@ export default defineConfig({
 
 - Type: `Object`
 
-overview 的配置项。配置为一个对象，类型如下：
+预览页/组件的配置项。配置为一个对象，类型如下：
 
 ```ts
 export interface FilterConfig {
