--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -336,7 +336,7 @@ export default defineConfig({
 预览页/组件的配置项。配置为一个对象，类型如下：
 
 ```ts
-export interface FilterConfig {
+interface FilterConfig {
   filterNameText?: string;
   filterPlaceholderText?: string;
   filterNoResultText?: string;
