feat: support location of overview filter (#1493)
Co-authored-by: Timeless0911 <50201324+Timeless0911@users.noreply.github.com>

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -343,6 +343,36 @@ export default defineConfig({
 });
 ```
 
+## overview
+
+- Type: `Object`
+
+The config of overview page/component. The config is an object with the following types:
+
+```ts
+interface FilterConfig {
+  filterNameText?: string;
+  filterPlaceholderText?: string;
+  filterNoResultText?: string;
+}
+```
+
+For example:
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    overview: {
+      filterNameText: 'Filter',
+      filterPlaceholderText: 'Enter keyword',
+      filterNoResultText: 'No matching API found',
+    },
+  },
+});
+```
+
 ## socialLinks
 
 - Type: `Array`
