feat: support replacement nav title

--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -70,6 +70,8 @@ const Layout = () => (
     beforeNav={<div>beforeNav</div>}
     /* Before the title of the nav bar in the upper left corner */
     beforeNavTitle={<span>😄</span>}
+    /* Nav bar title */
+    navTitle={<div>Custom Nav Title</div>}
     /* After the title of the nav bar in the upper left corner */
     afterNavTitle={<div>afterNavTitle</div>}
     /* The right corner of the nav menu */
