--- a/packages/document/docs/zh/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/zh/guide/advanced/custom-theme.mdx
@@ -70,6 +70,8 @@ const Layout = () => (
     beforeNav={<div>beforeNav</div>}
     /* 左上角导航栏标题之前 */
     beforeNavTitle={<span>😄</span>}
+    /* 导航栏标题 */
+    navTitle={<div>Custom Nav Title</div>}
     /* 左上角导航栏标题之后 */
     afterNavTitle={<div>afterNavTitle</div>}
     /* 导航栏右上角部分 */
