feat: support Card component

--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -82,6 +82,24 @@ interface BadgeProps {
 }
 ```
 
+## Card
+
+The Card component is used to display a card. For example:
+
+```tsx title="index.mdx"
+import { Card } from '@theme';
+
+function App() {
+  return <Card title="Card Title" text="Card Content" />;
+}
+```
+
+The effect is as follows:
+
+import { Card } from '@theme';
+
+<Card title="Card Title" text="Card Content" />
+
 ## Helmet
 
 It is generally used to set custom head content in documents (based on [react-helmet-async](https://www.npmjs.com/package/react-helmet-async)). The usage is as follows:
