--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -123,7 +123,7 @@ The effect is as follows:
 import { LinkCard } from '@theme';
 
 <LinkCard
-  href="https://rspress.dev/"
+  href="https://example.com"
   title="Link Card Title"
   description="Link Card Description"
 />
