--- a/packages/document/docs/zh/fragments/builtin-components.mdx
+++ b/packages/document/docs/zh/fragments/builtin-components.mdx
@@ -110,7 +110,7 @@ import { LinkCard } from '@theme';
 function App() {
   return (
     <LinkCard
-      href="https://rspress.dev/"
+      href="https://example.com"
       title="Link Card Title"
       description="Link Card Description"
     />
