--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -100,6 +100,29 @@ import { Card } from '@theme';
 
 <Card title="Card Title" text="Card Content" />
 
+The types of props included are as follows:
+
+```ts
+interface CardProps {
+  /**
+   * The title of the card.
+   */
+  title: React.ReactNode;
+  /**
+   * The content to display inside the card.
+   */
+  content?: React.ReactNode;
+  /**
+   * The icon of the card.
+   */
+  icon?: React.ReactNode;
+  /**
+   * The style of the card.
+   */
+  style?: React.CSSProperties;
+}
+```
+
 ## LinkCard
 
 The LinkCard component is used to display a link card. For example:
@@ -127,6 +150,29 @@ import { LinkCard } from '@theme';
   title="Link Card Title"
   description="Link Card Description"
 />
+
+The types of props included are as follows:
+
+```ts
+interface LinkCardProps {
+  /**
+   * The URL of the link.
+   */
+  href: string;
+  /**
+   * The title of the link.
+   */
+  title: string;
+  /**
+   * The description of the link.
+   */
+  description?: React.ReactNode;
+  /**
+   * The style of the link card.
+   */
+  style?: React.CSSProperties;
+}
+```
 
 ## Helmet
 
