--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -98,7 +98,7 @@ The effect is as follows:
 
 import { Card } from '@theme';
 
-<Card title="Card Title" text="Card Content" />
+<Card title="Card Title" content="Card Content" />
 
 The types of props included are as follows:
 
