--- a/packages/document/docs/en/fragments/builtin-components.mdx
+++ b/packages/document/docs/en/fragments/builtin-components.mdx
@@ -90,7 +90,7 @@ The Card component is used to display a card. For example:
 import { Card } from '@theme';
 
 function App() {
-  return <Card title="Card Title" text="Card Content" />;
+  return <Card title="Card Title" content="Card Content" />;
 }
 ```
 
