--- a/packages/document/docs/zh/fragments/builtin-components.mdx
+++ b/packages/document/docs/zh/fragments/builtin-components.mdx
@@ -90,7 +90,7 @@ Card 组件用于展示卡片。使用方法如下：
 import { Card } from '@theme';
 
 function App() {
-  return <Card title="Card Title" text="Card Content" />;
+  return <Card title="Card Title" content="Card Content" />;
 }
 ```
 
