--- a/packages/document/docs/zh/fragments/builtin-components.mdx
+++ b/packages/document/docs/zh/fragments/builtin-components.mdx
@@ -98,7 +98,7 @@ function App() {
 
 import { Card } from '@theme';
 
-<Card title="Card Title" text="Card Content" />
+<Card title="Card Title" content="Card Content" />
 
 其中包含的 props 类型如下：
 
