--- a/packages/document/docs/zh/fragments/builtin-components.mdx
+++ b/packages/document/docs/zh/fragments/builtin-components.mdx
@@ -82,6 +82,98 @@ interface BadgeProps {
 }
 ```
 
+## Card
+
+Card 组件用于展示卡片。使用方法如下：
+
+```tsx title="index.mdx"
+import { Card } from '@theme';
+
+function App() {
+  return <Card title="Card Title" content="Card Content" />;
+}
+```
+
+效果如下：
+
+import { Card } from '@theme';
+
+<Card title="Card Title" content="Card Content" />
+
+其中包含的 props 类型如下：
+
+```ts
+interface CardProps {
+  /**
+   * 卡片标题。
+   */
+  title: React.ReactNode;
+  /**
+   * 卡片内容。
+   */
+  content?: React.ReactNode;
+  /**
+   * 卡片图标。
+   */
+  icon?: React.ReactNode;
+  /**
+   * 卡片样式。
+   */
+  style?: React.CSSProperties;
+}
+```
+
+## LinkCard
+
+LinkCard 组件用于展示链接卡片。使用方法如下：
+
+```tsx title="index.mdx"
+import { LinkCard } from '@theme';
+
+function App() {
+  return (
+    <LinkCard
+      href="https://example.com"
+      title="Link Card Title"
+      description="Link Card Description"
+    />
+  );
+}
+```
+
+效果如下：
+
+import { LinkCard } from '@theme';
+
+<LinkCard
+  href="https://example.com"
+  title="Link Card Title"
+  description="Link Card Description"
+/>
+
+其中包含的 props 类型如下：
+
+```ts
+interface LinkCardProps {
+  /**
+   * 链接的 URL。
+   */
+  href: string;
+  /**
+   * 链接的标题。
+   */
+  title: string;
+  /**
+   * 链接的描述。
+   */
+  description?: React.ReactNode;
+  /**
+   * 链接卡片的样式。
+   */
+  style?: React.CSSProperties;
+}
+```
+
 ## Helmet
 
 一般用于在文档中设置自定义 head 内容（基于 [react-helmet-async](https://www.npmjs.com/package/react-helmet-async)）。使用方法如下：
