--- a/packages/document/docs/en/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/en/api/config/config-frontmatter.mdx
@@ -305,7 +305,7 @@ The DOM structure of the final generated sidebar is abbreviated as follows:
 
 ```html
 <div class="rspress-sidebar-group">
-  <div data-context="context-foo"></div>
-  <div data-context="context-bar"></div>
+  <div className="rspress-sidebar-item" data-context="context-foo"></div>
+  <div className="rspress-sidebar-item" data-context="context-bar"></div>
 </div>
 ```
