--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -306,7 +306,7 @@ context: 'context-bar'
 
 ```html
 <div class="rspress-sidebar-group">
-  <div data-context="context-foo"></div>
-  <div data-context="context-bar"></div>
+  <div className="rspress-sidebar-item" data-context="context-foo"></div>
+  <div className="rspress-sidebar-item" data-context="context-bar"></div>
 </div>
 ```
