--- a/packages/document/docs/en/plugin/official-plugins/container-syntax.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/container-syntax.mdx
@@ -1,4 +1,4 @@
-# @rspress/container-syntax
+# @rspress/plugin-container-syntax
 
 import { SourceCode } from 'rspress/theme';
 
@@ -6,5 +6,5 @@ import { SourceCode } from 'rspress/theme';
 
 Rspress's built-in plugin. It mainly have two functions:
 
-- Parse the container syntax in Markdown/MDX, such as `:::tip`, `:::warning`, and compile them into JSX syntax.
+- Parse the container syntax in Markdown/MDX, such as `:::tip`, `:::warning`, `> [!NOTE]`, and compile them into JSX syntax.
 - Add styles to the container block.
