--- a/packages/document/docs/zh/plugin/official-plugins/container-syntax.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/container-syntax.mdx
@@ -1,4 +1,4 @@
-# @rspress/container-syntax
+# @rspress/plugin-container-syntax
 
 import { SourceCode } from 'rspress/theme';
 
@@ -6,5 +6,5 @@ import { SourceCode } from 'rspress/theme';
 
 Rspress 的内置插件，主要有两个作用：
 
-- 解析 Markdown/MDX 中的 container 语法，如 `:::tip`、`:::warning`，将其编译为 JSX 语法。
+- 解析 Markdown/MDX 中的 container 语法，如 `:::tip`、`:::warning`、 `> [!NOTE]`，将其编译为 JSX 语法。
 - 给 container 块添加样式。
