--- a/packages/document/docs/en/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx.mdx
@@ -158,7 +158,7 @@ This is a `block` of `Custom Title`
 
 ### GitHub Markdown Alerts syntax
 
-You can also use [GitHub Markdown Alerts syntax](https://docs.github.com/zh/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#alerts) to create custom containers.
+You can also use [GitHub Markdown Alerts Syntax](https://docs.github.com/zh/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#alerts) to create custom containers.
 
 **Input:**
 
