--- a/packages/document/docs/en/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx.mdx
@@ -156,7 +156,7 @@ This is a `block` of `Custom Title`
 This is a `block` of `Custom Title`
 :::
 
-### GitHub Markdown Alerts syntax
+### GitHub Markdown Alerts Syntax
 
 You can also use [GitHub Markdown Alerts Syntax](https://docs.github.com/zh/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#alerts) to create custom containers.
 
