--- a/packages/document/docs/zh/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/zh/guide/basic/use-mdx.mdx
@@ -109,7 +109,7 @@ title: Hello World
 这是一个 `danger` 类型的 `block`
 :::
 
-::: details
+:::details
 这是一个 `details` of type `block`
 :::
 
@@ -144,7 +144,7 @@ title: Hello World
 这是一个 `danger` 类型的 `block`
 :::
 
-::: details
+:::details
 这是一个 `details` of type `block`
 :::
 
@@ -158,7 +158,7 @@ title: Hello World
 
 ### GitHub Markdown Alerts 语法
 
-你可以使用 [GitHub Markdown Alerts 语法](https://docs.github.com/zh/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#alerts) 来创建自定义容器
+你可以使用 [GitHub Markdown Alerts 语法](https://docs.github.com/zh/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax#alerts) 来创建自定义容器。
 
 **Input:**
 
@@ -180,12 +180,6 @@ title: Hello World
 
 > [!DETAILS]
 > 这是一个 `details` 类型的 `block`
-
-> [!TIP]
-> 这是一个 `block` of `Custom Title`
-
-> [!TIP]
-> 这是一个 `block` of `Custom Title`
 ```
 
 **Output:**
@@ -207,12 +201,6 @@ title: Hello World
 
 > [!DETAILS]
 > 这是一个 `details` 类型的 `block`
-
-> [!TIP]
-> 这是一个 `block` of `Custom Title`
-
-> [!TIP]
-> 这是一个 `block` of `Custom Title`
 
 ## 代码块
 
