chore: fix the custom-link

--- a/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
@@ -92,6 +92,12 @@ export type SideMetaItem =
       type: 'section-header';
       label: string;
       tag?: string;
+    }
+  | {
+      type: 'custom-link';
+      label: string;
+      link: string;
+      context: string;
     };
 ```
 
