--- a/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
@@ -87,6 +87,17 @@ export type SideMetaItem =
   | {
       type: 'divider';
       dashed?: boolean;
+    }
+  | {
+      type: 'section-header';
+      label: string;
+      tag?: string;
+    }
+  | {
+      type: 'custom-link';
+      label: string;
+      link: string;
+      context?: string;
     };
 ```
 
