--- a/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
@@ -97,7 +97,7 @@ export type SideMetaItem =
       type: 'custom-link';
       label: string;
       link: string;
-      context: string;
+      context?: string;
     };
 ```
 
@@ -235,6 +235,7 @@ docs
   type: 'custom-link';
   label: string;
   link: string;
+  context?: string;
 }
 ```
 
