--- a/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
@@ -233,8 +233,9 @@ In the case of describing **custom link**, the types are as follows:
 ```ts
 {
   type: 'custom-link';
-  link: string;
   label: string;
+  link: string;
+  context?: string;
 }
 ```
 
