feat(plugin-auto-nav-sidebar): support index as the dir click section and custom-link context (#1572)
Co-authored-by: Timeless0911 <50201324+Timeless0911@users.noreply.github.com>

--- a/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
@@ -87,6 +87,17 @@ export type SideMetaItem =
   | {
       type: 'divider';
       dashed?: boolean;
+    }
+  | {
+      type: 'section-header';
+      label: string;
+      tag?: string;
+    }
+  | {
+      type: 'custom-link';
+      label: string;
+      link: string;
+      context?: string;
     };
 ```
 
@@ -222,8 +233,9 @@ In the case of describing **custom link**, the types are as follows:
 ```ts
 {
   type: 'custom-link';
-  link: string;
   label: string;
+  link: string;
+  context?: string;
 }
 ```
 
