docs: ts-node is no longer required

--- a/packages/document/docs/en/guide/start/getting-started.mdx
+++ b/packages/document/docs/en/guide/start/getting-started.mdx
@@ -22,7 +22,7 @@ mkdir rspress-app && cd rspress-app
 
 Execute `npm init -y` to initialize a project. You can install Rspress using npm, yarn or pnpm:
 
-<PackageManagerTabs command="install rspress typescript ts-node -D" />
+<PackageManagerTabs command="install rspress -D" />
 
 Then create the file with the following command
 
