--- a/packages/document/docs/zh/guide/start/getting-started.mdx
+++ b/packages/document/docs/zh/guide/start/getting-started.mdx
@@ -22,7 +22,7 @@ mkdir rspress-app && cd rspress-app
 
 执行 `npm init -y` 来初始化一个项目。你可以使用 npm、yarn 或 pnpm 安装 Rspress:
 
-<PackageManagerTabs command="install rspress typescript ts-node -D" />
+<PackageManagerTabs command="install rspress -D" />
 
 然后通过如下命令创建文件:
 
