--- a/e2e/fixtures/inline-markdown/doc/index.mdx
+++ b/e2e/fixtures/inline-markdown/doc/index.mdx
@@ -1,1 +1,12 @@
-# Hello World
+---
+pageType: home
+
+hero:
+  name: My Site
+  text: A cool website!
+  tagline: This is the tagline
+features:
+  - title: Blazing fast build speed
+    details: The core compilation module is based on the Rust front-end toolchain, providing a more ultimate development experience.
+    icon: <img src="https://assets.rspack.dev/rspress/rspress-logo-480x480.png" />
+---
