--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -88,7 +88,7 @@ const Layout = () => (
     top={<div>top</div>}
     /* Bottom of the entire page */
     bottom={<div>bottom</div>}
-    /* Custom MDX components. */
+    /* Custom MDX components */
     components={{ p: props => <p {...props} className="my-4 leading-7" /> }}
   />
 );
