--- a/packages/document/docs/zh/api/config/config-build.mdx
+++ b/packages/document/docs/zh/api/config/config-build.mdx
@@ -6,12 +6,12 @@
 
 用于自定义 Rsbuild 的配置项，完整配置项请查看 [Rsbuild - 配置](https://rsbuild.dev/zh/config/)。
 
-- 示例：使用 [source.alias](https://rsbuild.dev/config/source/alias) 配置路径别名：
+- 示例：使用 [source.alias](https://rsbuild.dev/zh/config/resolve/alias) 配置路径别名：
 
 ```ts title="rspress.config.ts"
 export default defineConfig({
   builderConfig: {
-    source: {
+    resolve: {
       alias: {
         '@common': './src/common',
       },
@@ -20,7 +20,7 @@ export default defineConfig({
 });
 ```
 
-- 示例：使用 [tools.rspack](https://rsbuild.dev/config/tools/rspack) 修改 Rspack 配置，比如注册一个 webpack 或 Rspack 插件。比如：
+- 示例：使用 [tools.rspack](https://rsbuild.dev/zh/config/tools/rspack) 修改 Rspack 配置，比如注册一个 webpack 或 Rspack 插件。比如：
 
 ```ts title="rspress.config.ts"
 export default defineConfig({
