docs: head config only takes effect in production mode

--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -187,7 +187,7 @@ export default defineConfig({
 - Type: `string` | `[string, Record<string, string>]` | `(route) => string | [string, Record<string, string>] | undefined`
 - Can be appended per page via [frontmatter](./config-frontmatter.mdx#head)
 
-Additional elements to render in the `<head>` tag in the page HTML.
+Used to set additional elements rendered in the `<head>` tag of the page's HTML in production mode.
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
