--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -187,7 +187,7 @@ export default defineConfig({
 - Type: `string` | `[string, Record<string, string>]` | `(route) => string | [string, Record<string, string>] | undefined`
 - 也可以通过 [frontmatter](./config-frontmatter.mdx#head) 针对每个页面设置
 
-页面 HTML 的 `<head>` 标签中呈现的附加元素。
+用于设置生产模式下页面 HTML 的 `<head>` 标签中呈现的附加元素。
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
