--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -673,3 +673,21 @@ export default defineConfig({
   },
 });
 ```
+
+## fallbackHeadingTitle
+
+- Type: `boolean`
+- Default: `true`
+
+是否在文档标题未提供时将 [`frontmatter.title`](./config-frontmatter#title) 作为后备内容。比如:
+
+
+```ts title="rspress.config.ts"
+import { defineConfig } from 'rspress/config';
+
+export default defineConfig({
+  themeConfig: {
+    fallbackHeadingTitle: false,
+  },
+});
+```
