test(e2e): add e2e test

--- a/e2e/fixtures/hide-nav-bar/doc/index.mdx
+++ b/e2e/fixtures/hide-nav-bar/doc/index.mdx
@@ -2,4 +2,98 @@
 pageType: custom
 ---
 
-A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF A LOT OF CONTENT A LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF CONTENT A LOT OF A LOT OF CONTENT A LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENTA LOT OF CONTENT
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
+
+A LOT OF CONTENT
